# shout-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/example_package_nelskev/: example.py
tests/: test_simple.py
