[build-system]
requires = ["hatchling == 1.21"]
build-backend = "hatchling.build"

[project]
name = "example_package_nelskev"
version = "0.0.6"
authors = [
  { name="Kevin" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files.globs = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/nelskev/shout-py"
Issues = "https://github.com/nelskev/shout-py/issues"